renombre directorios y archivo css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="css/style-v5.css">
+        <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
         <title>Pino Cerveza Artesanal</title>
@@ -16,20 +16,20 @@
             <header class="header">
                 <div>
                     <a href="index.html">
-                        <img class="logo" src="iconos/cerveza-pino.png" alt="Logo de la marca">
+                        <img class="logo" src="icons/cerveza-pino.png" alt="Logo de la marca">
                     </a>
                 </div>       
                 <nav class="menuNavegacion">
                     <ul>
                         <li>
                             <a class="iconoMenu" href="index.html">
-                                <img src="iconos/icono-menu-blanco.png" alt="icono menu">
+                                <img src="icons/icono-menu-blanco.png" alt="icono menu">
                             </a>
                             <ul>
                                 <li><a href="index.html">Inicio</a></li>
-                                <li><a href="paginas/productos.html">Productos</a></li>
-                                <li><a href="paginas/nosotros.html">Nosotros</a></li>
-                                <li><a href="paginas/contacto.html">Contacto</a></li>
+                                <li><a href="pages/productos.html">Productos</a></li>
+                                <li><a href="pages/nosotros.html">Nosotros</a></li>
+                                <li><a href="pages/contacto.html">Contacto</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -37,10 +37,10 @@
             </header>
             <section class="contenedorPrincipal main">
                 <div>
-                    <img class="imagenCanillas" src="imagenes/canillas.jpg" alt="Foto representativa de la marca">
+                    <img class="imagenCanillas" src="img/canillas.jpg" alt="Foto representativa de la marca">
                 </div>
                 <div class="contenedorDescripcion main">
-                    <img class="imagenLogo" src="imagenes/cerveza-pino-gris.png" alt="imagen corporativa"> 
+                    <img class="imagenLogo" src="img/cerveza-pino-gris.png" alt="imagen corporativa"> 
                     <article>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero et eligendi totam debitis sunt, ullam quidem temporibus exercitationem! Repellat nam neque iure corporis enim fugiat molestiae illo nesciunt aliquid consequuntur.</p>    
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, autem distinctio incidunt quia sunt totam suscipit provident ipsam! Blanditiis, quo.</p>
@@ -50,35 +50,35 @@
             <section class="contenedorDestacadas destacada">
                 <div class="caja1">
                     <h4>Cerveza 1</h4>
-                    <img src="iconos/birra5.svg" alt="Cerveza 1">
+                    <img src="icons/birra5.svg" alt="Cerveza 1">
                     <p>Breve presentación del primer estilo de cerveza.</p>            
                 </div>
                 <div class="caja2">
                     <h4>Cerveza 2</h4>
-                    <img src="iconos/birra3.svg" alt="Cerveza 2">
+                    <img src="icons/birra3.svg" alt="Cerveza 2">
                     <p>Breve presentación del segundo estilo de cerveza.</p>   
                 </div>
                 <div class="caja3">
                     <h4>Cerveza 3</h4>
-                    <img src="iconos/birra7.svg" alt="Cerveza 3">
+                    <img src="icons/birra7.svg" alt="Cerveza 3">
                     <p>Breve presentación del tercer estilo de cerveza.</p>
                 </div>
             </section>
             <footer class="footer">
                 <div>
-                    <a href="paginas/contacto.html" target="">
+                    <a href="pages/contacto.html" target="">
                         <h3>Escribinos</h3>
                     </a>
                 </div>
                 <div>
                     <a href="https://www.facebook.com/" target="_blank">
-                        <img src="iconos/facebook.svg" alt="facebook">
+                        <img src="icons/facebook.svg" alt="facebook">
                     </a>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img src="iconos/instagram.svg" alt="instagram">
+                        <img src="icons/instagram.svg" alt="instagram">
                     </a>
                     <a href="https://web.whatsapp.com/" target="_blank">
-                        <img src="iconos/whatsapp.svg" alt="whatsapp">
+                        <img src="icons/whatsapp.svg" alt="whatsapp">
                     </a>
                 </div>
             </footer>
