--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/style-v5.css">
+        <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
         <title>Pino Cerveza Artesanal</title>
@@ -16,14 +16,14 @@
             <header class="header">
                 <div>
                     <a href="../index.html">
-                        <img class="logo" src="../iconos/cerveza-pino.png" alt="Logo de la marca">
+                        <img class="logo" src="../icons/cerveza-pino.png" alt="Logo de la marca">
                     </a>
                 </div>       
                 <nav class="menuNavegacion">
                     <ul>
                         <li>
                             <a class="iconoMenu" href="../index.html">
-                                <img src="../iconos/icono-menu-blanco.png" alt="icono menu">
+                                <img src="../icons/icono-menu-blanco.png" alt="icono menu">
                             </a>
                             <ul>
                                 <li><a href="../index.html">Inicio</a></li>
@@ -57,19 +57,19 @@
                         </article>
                     </div>
                     <div>
-                        <img src="../imagenes/fabrica-cerveza.jpg" alt="imagen corporativa" class="imagenCorporativa">
+                        <img src="../img/fabrica-cerveza.jpg" alt="imagen corporativa" class="imagenCorporativa">
                     </div>
                 </div>
     
                 <div class="ventas">
                     <div>
                         <h2>Venta envasada</h2>
-                        <img src="../imagenes/botellas.jpg" alt="imagen corporativa" class="imagenCorporativa">
+                        <img src="../img/botellas.jpg" alt="imagen corporativa" class="imagenCorporativa">
                         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, corrupti?</p>
                     </div>
                     <div>
                         <h2>Venta en barriles</h2>
-                        <img src="../imagenes/barriles-cerveza.jpg" alt="imagen corporativa" class="imagenCorporativa">
+                        <img src="../img/barriles-cerveza.jpg" alt="imagen corporativa" class="imagenCorporativa">
                         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, debitis.</p>
                     </div>
                 </div>
@@ -83,13 +83,13 @@
                 </div>
                 <div>
                     <a href="https://www.facebook.com/" target="_blank">
-                        <img src="../iconos/facebook.svg" alt="facebook">
+                        <img src="../icons/facebook.svg" alt="facebook">
                     </a>
                     <a href="https://www.instagram.com/" target="_blank">
-                        <img src="../iconos/instagram.svg" alt="instagram">
+                        <img src="../icons/instagram.svg" alt="instagram">
                     </a>
                     <a href="https://web.whatsapp.com/" target="_blank">
-                        <img src="../iconos/whatsapp.svg" alt="whatsapp">
+                        <img src="../icons/whatsapp.svg" alt="whatsapp">
                     </a>
                 </div>
             </footer>
