--- a/pages/productos.html
+++ b/pages/productos.html
@@ -14,27 +14,40 @@
     <body>
         <div class="contenedorProductos">
             <header class="header">
+
                 <div>
-                    <a href="../index.html">
-                        <img class="logo" src="../icons/cerveza-pino.png" alt="Logo de la marca">
+                    <a class="header__index" href="../index.html">
+                        <img class="header__logo" src="../icons/cerveza-pino.png" alt="Logo de la marca">
                     </a>
-                </div>       
-                <nav class="menuNavegacion">
+                </div>
+
+                <nav class="navegacion">
                     <ul>
-                        <li>
-                            <a class="iconoMenu" href="../index.html">
-                                <img src="../icons/icono-menu-blanco.png" alt="icono menu">
+                        <li class="navegacion__lista">
+                            <a href="../index.html">
+                                <img class="navegacion__icono" src="../icons/icono-menu-blanco.png" alt="icono menu">
                             </a>
-                            <ul>
-                                <li><a href="../index.html">Inicio</a></li>
-                                <li><a href="productos.html">Productos</a></li>
-                                <li><a href="nosotros.html">Nosotros</a></li>
-                                <li><a href="contacto.html">Contacto</a></li>
-                                <li><a href="galeria.html">Galeria</a></li>
+                            <ul class="navegacion__botones">
+                                <li>
+                                    <a class="navegacion__boton" href="../index.html">Inicio</a>
+                                </li>
+                                <li>
+                                    <a class="navegacion__boton" href="productos.html">Productos</a>
+                                </li>
+                                <li>
+                                    <a class="navegacion__boton" href="nosotros.html">Nosotros</a>
+                                </li>
+                                <li>
+                                    <a class="navegacion__boton" href="contacto.html">Contacto</a>
+                                </li>
+                                <li>
+                                    <a class="navegacion__boton" href="galeria.html">Galeria</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
                 </nav>
+
             </header>
             
             <section class="contenedorEstilos main">
