reescribi css en sass, agregue variables y mixins

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <nav class="navegacion">
                     <ul>
                         <li class="navegacion__lista">
-                            <a href="index.html">
+                            <a class="navegacion__link" href="index.html">
                                 <img class="navegacion__icono" src="icons/icono-menu-blanco.png" alt="icono menu">
                             </a>
                             <ul class="navegacion__botones">
