--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
             </header>
     
             <section class="sectionContacto main">
-                <form action="">
+                <form class="formulario" action="">
                     <div>
                         <h3>Escribinos</h3>
                         <p>Completa el siguiente formulario para recibr más información</p>
