--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -56,14 +56,14 @@
 
                 <div class="cardNosotros cardNosotros--blanco">
 
-                    <div>
+                    <div class="cardNosotros__contenedorVideo">
                         <video class="cardNosotros__video" src="../media/pexels-cottonbro-5530285.mp4" controls autoplay></video>
                     </div>
 
-                    <div>
-                        <article>
-                            <h2>Sobre Nosotros</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium enim nisi quia amet molestiae, quae sunt magni voluptate exercitationem impedit similique suscipit adipisci ipsa deleniti iusto voluptatibus cupiditate aperiam omnis fuga! Asperiores soluta dolores beatae porro modi repudiandae iure assumenda fuga maiores? Mollitia reiciendis sint, harum odio vero tempore ratione similique obcaecati tempora eos! Velit eligendi molestiae praesentium consequatur doloremque. Enim alias explicabo repudiandae dolorum quae, in animi porro et itaque, voluptates dolorem ratione accusamus. Non alias, facere rerum dolore eaque omnis quod modi sint molestiae voluptas, facilis iure placeat est aperiam accusamus nobis aut autem quam quo ad maiores.</p>
+                    <div class="cardosotros__contenedorArticulo">
+                        <article class="cardNosotros__articulo">
+                            <h2 class="cardNosotros__titulo">Sobre Nosotros</h2>
+                            <p class="cardNosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium enim nisi quia amet molestiae, quae sunt magni voluptate exercitationem impedit similique suscipit adipisci ipsa deleniti iusto voluptatibus cupiditate aperiam omnis fuga! Asperiores soluta dolores beatae porro modi repudiandae iure assumenda fuga maiores? Mollitia reiciendis sint, harum odio vero tempore ratione similique obcaecati tempora eos! Velit eligendi molestiae praesentium consequatur doloremque. Enim alias explicabo repudiandae dolorum quae, in animi porro et itaque, voluptates dolorem ratione accusamus. Non alias, facere rerum dolore eaque omnis quod modi sint molestiae voluptas, facilis iure placeat est aperiam accusamus nobis aut autem quam quo ad maiores.</p>
                         </article>
                     </div>
                 </div>
