Agregue SEO a todas las paginas, modificando titulos y agregando etiquetas meta description y keywords

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -2,13 +2,15 @@
 <html lang="es">
 
     <head>
+        <meta name="description" content="Escribinos para mayor información y formas de adquirir nuestras cervezas.">
+        <meta name="keywords" content="cerveza, cerveceria, birra, artesanal, craft, beer, escribinos, contactanos">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Pino Cerveza Artesanal</title>
+        <title>Página de contacto de Cervecería Artesanal Pino</title>
     </head>
 
     <body>
