--- a/pages/productos.html
+++ b/pages/productos.html
@@ -2,13 +2,15 @@
 <html lang="es">
 
     <head>
+        <meta name="description" content="Conocé nuestros 9 estilos de cerveza artesanal">
+        <meta name="keywords" content="cervezas, birras, estilos, ipa, schottish, apa, porter, lager, blonde, honey, hefeweizen">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Pino Cerveza Artesanal</title>
+        <title>Estilos de Cerveceria Artesanal Pino</title>
     </head>
 
     <body>
