--- a/index.html
+++ b/index.html
@@ -2,13 +2,15 @@
 <html lang="es">
 
     <head>
+        <meta name="description" content="Cerveza Artesanal Pino se dedica a la fabricación de 9 estilos de cerveza artesanal. Encontranos en cervecerías y supermercados.">
+        <meta name="keywords" content="cerveza, cerveceria, birra, artesanal, craft, beer">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Pino Cerveza Artesanal</title>
+        <title>Página de inicio de Cervecería Artesanal Pino</title>        
     </head>
 
     <body>
