--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -2,6 +2,8 @@
 <html lang="es">
 
     <head>
+        <meta name="description" content="Recorré con las mejores imágenes nuestra fábrica y estilos de cerveza.">
+        <meta name="keywords" content="cerveza, cerveceria, birra, artesanal, craft, beer, fotos">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,7 +11,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Pino Cerveza Artesanal</title>
+        <title>Galeria de fotos de Cerveceria Artesanal Pino</title>
     </head>
 
     <body>
