--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <div>
                     <a class="header__index" href="index.html">
-                        <img class="header__logo" src="icons/cerveza-pino.png" alt="Logo de la marca">
+                        <img class="header__logo" src="icons/crafted.svg" alt="Logo de la marca">
                     </a>
                 </div>
 
