--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div class="contenedorPrincipal__descripcion main">
                     <img class="contenedorPrincipal__logo" src="img/cerveza-pino-gris.png" alt="imagen corporativa"> 
                     <article class="contenedorPrincipal_articulos">
-                        <p class="contenedorPrincipal__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero et eligendi totam debitis sunt, ullam quidem temporibus exercitationem! Repellat nam neque iure corporis enim fugiat molestiae illo nesciunt aliquid consequuntur.</p>    
-                        <p class="contenedorPrincipal__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, autem distinctio incidunt quia sunt totam suscipit provident ipsam! Blanditiis, quo.</p>
+                        <p class="contenedorPrincipal__texto">Este es un nuevo texto de prueba para la clase 14 de Git en Coderhouse.</p>    
+                        <p class="contenedorPrincipal__texto">Es una modificación que se realiza sobre la rama-testeo.</p>
                     </article>
                 </div>
 
