--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <img class="contenedorPrincipal__logo" src="img/cerveza-pino-gris.png" alt="imagen corporativa"> 
                     <article class="contenedorPrincipal_articulos">
                         <p class="contenedorPrincipal__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero et eligendi totam debitis sunt, ullam quidem temporibus exercitationem! Repellat nam neque iure corporis enim fugiat molestiae illo nesciunt aliquid consequuntur.</p>    
-                        <p class="contenedorPrincipal__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, autem distinctio incidunt quia sunt totam suscipit provident ipsam! Blanditiis, quo.</p>
+                        <p class="contenedorPrincipal__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, autem distinctio incidnt quia sunt totam suscipit provident ipsam! Blanditiis, quo.</p>
                     </article>
                 </div>
 
