Corregi titulos de las paginas

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Página de inicio de Cervecería Artesanal Pino</title>        
+        <title>Cerveza Artesanal Pino</title>        
     </head>
 
     <body>
@@ -21,7 +21,7 @@
 
                 <div>
                     <a class="header__index" href="index.html">
-                        <img class="header__logo" src="icons/crafted.svg" alt="Logo de la marca">
+                        <img class="header__logo" src="icons/cerveza-pino.png" alt="Logo de la marca">
                     </a>
                 </div>
 
@@ -63,8 +63,6 @@
                 <div class="contenedorPrincipal__descripcion main">
                     <img class="contenedorPrincipal__logo" src="img/cerveza-pino-gris.png" alt="imagen corporativa"> 
                     <article class="contenedorPrincipal_articulos">
-                        <p class="contenedorPrincipal__texto">Este es un nuevo texto de prueba para la clase 14 de Git en Coderhouse.</p>    
-                        <p class="contenedorPrincipal__texto">Es una modificación que se realiza sobre la rama-testeo.</p>
                         <p class="contenedorPrincipal__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero et eligendi totam debitis sunt, ullam quidem temporibus exercitationem! Repellat nam neque iure corporis enim fugiat molestiae illo nesciunt aliquid consequuntur.</p>    
                         <p class="contenedorPrincipal__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, autem distinctio incidnt quia sunt totam suscipit provident ipsam! Blanditiis, quo.</p>
                     </article>
