--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Página de contacto de Cervecería Artesanal Pino</title>
+        <title>Página de contacto de Cerveza Artesanal Pino</title>
     </head>
 
     <body>
@@ -21,7 +21,7 @@
 
                 <div>
                     <a class="header__index" href="../index.html">
-                        <img class="header__logo" src="../icons/crafted.svg" alt="Logo de la marca">
+                        <img class="header__logo" src="../icons/cerveza-pino.png" alt="Logo de la marca">
                     </a>
                 </div>
 
