--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="../css/styles.css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Saira:wght@200&display=swap" rel="stylesheet">
-        <title>Galeria de fotos de Cerveceria Artesanal Pino</title>
+        <title>Galeria de fotos de Cerveza Artesanal Pino</title>
     </head>
 
     <body>
@@ -20,7 +20,7 @@
 
             <div>
                 <a class="header__index" href="../index.html">
-                    <img class="header__logo" src="../icons/crafted.svg" alt="Logo de la marca">
+                    <img class="header__logo" src="../icons/cerveza-pino.png" alt="Logo de la marca">
                 </a>
             </div>
 
