Reemplaze los lorem

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -65,7 +65,9 @@
                     <div class="cardosotros__contenedorArticulo">
                         <article class="cardNosotros__articulo">
                             <h2 class="cardNosotros__titulo">Sobre Nosotros</h2>
-                            <p class="cardNosotros__parrafo">Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium enim nisi quia amet molestiae, quae sunt magni voluptate exercitationem impedit similique suscipit adipisci ipsa deleniti iusto voluptatibus cupiditate aperiam omnis fuga! Asperiores soluta dolores beatae porro modi repudiandae iure assumenda fuga maiores? Mollitia reiciendis sint, harum odio vero tempore ratione similique obcaecati tempora eos! Velit eligendi molestiae praesentium consequatur doloremque. Enim alias explicabo repudiandae dolorum quae, in animi porro et itaque, voluptates dolorem ratione accusamus. Non alias, facere rerum dolore eaque omnis quod modi sint molestiae voluptas, facilis iure placeat est aperiam accusamus nobis aut autem quam quo ad maiores.</p>
+                            <p class="cardNosotros__parrafo">Cerveza Artesanal Pino nace de la pasión de un grupo de amigos por la cerveza artesanal y su infinidad de variedad de estilos posibles.</p>
+                            <p class="cardNosotros__parrafo">Creada en el barrio de La Boca, en Buenos Aires, Argentina, nos dedicamos a la fabricación y venta de cerveza artesanal, contando con 9 estilos propios. Amamos lo que hacemos y nos gusta lograr la excelencia en cada producto.</p>
+                            <p class="cardNosotros__parrafo">¡Encontranos en las mejores cervecerías!</p>
                         </article>
                     </div>
                 </div>
@@ -75,7 +77,7 @@
                     <div>
                         <article>
                             <h2>Proceso de Elaboración</h2>
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse quasi dolores officiis magnam porro neque quo provident voluptate fuga voluptas quis quia saepe vitae itaque tempore magni totam maiores praesentium doloribus, reprehenderit dolorem illo facilis consequuntur! Delectus ea unde est dicta, provident, assumenda pariatur nihil libero eaque animi in totam.</p>
+                            <p>Contamos con una pequeña fábrica propia donde trabajamos con la mejor materia prima y los mejores equipos para lograr la perfección en todos los procesos de elaboración de nuestra cerveza artesanal.</p>
                         </article>
                     </div>
 
@@ -90,13 +92,13 @@
                     <div class="cardNosotros__ventas">
                         <h2>Venta envasada</h2>
                         <img class="cardNosotros__imagen" src="../img/botellas.jpg" alt="imagen corporativa" >
-                        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugit, corrupti?</p>
+                        <p>Conseguí nuestras cervezas en botellas de 500ml o 1 litro.</p>
                     </div>
 
                     <div class="cardNosotros__ventas">
                         <h2>Venta en barriles</h2>
                         <img class="cardNosotros__imagen" src="../img/barriles-cerveza.jpg" alt="imagen corporativa" >
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cum, debitis.</p>
+                        <p>Conseguí nuestras cervezas en barriles de 10, 20 o 50 litros.</p>
                     </div>
 
                 </div>
