--- a/pages/productos.html
+++ b/pages/productos.html
@@ -56,7 +56,8 @@
                 <div class="estilos">
                     <h4>BLONDE</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>Cuerpo liviano, amargor bajo y alta tomabilidad.</p>
+                    <p>Una cerveza más balanceada hacia la malta</p>
                     <ul>
                         <li>IBU: 15</li>
                         <li>ABV: 4,5 %</li>
@@ -66,7 +67,7 @@
                 <div class="estilos">
                     <h4>HONEY</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>Cuerpo liviano, a medio, alta tomabilidad, con notas de miel en sabor y aroma.</p>
                     <ul>
                         <li>IBU: 13</li>
                         <li>ABV: 5,5 %</li>
@@ -76,7 +77,8 @@
                 <div class="estilos">
                     <h4>SCOTTISH</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>De color rojizo, cuerpo medio y maltosidad pronunciada.</p>
+                    <p>En nariz notas de cereza, nuez y caramelo.</p>
                     <ul>
                         <li>IBU: 15</li>
                         <li>ABV: 4,5 %</li>
@@ -86,7 +88,7 @@
                 <div class="estilos">
                     <h4>RED HONEY</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>De color rojizo y cuerpo medio. En nariz notas de cereza, nuez y caramelo. En boca notas de miel que le aportan un dulzor con un leve tono a eucalipto.</p>
                     <ul>
                         <li>IBU: 13</li>
                         <li>ABV: 5,3 %</li>
@@ -96,7 +98,7 @@
                 <div class="estilos">
                     <h4>HEFEWEIZEN</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>Cerveza de trigo Alemana con marcadas notas de banana y clavo de olor, tanto en boca como en nariz.</p>
                     <ul>
                         <li>IBU: 10</li>
                         <li>ABV: 4,8 %</li>
@@ -104,9 +106,9 @@
                     </ul>
                 </div>
                 <div class="estilos">
-                    <h4>STOUT</h4>
+                    <h4>DRY STOUT</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>Marcadas notas de café y tostado, final seco y suave a la garganta. Cerveza negra de alta tomabilidad.</p>
                     <ul>
                         <li>IBU: 29</li>
                         <li>ABV: 4,5 %</li>
@@ -116,7 +118,7 @@
                 <div class="estilos">
                     <h4>SESSION IPA</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>De cuerpo liviano, alta tomabilidad, amargor medio a medio/alto. Notas citricas y de frutas tropicales en aroma y sabor.</p>
                     <ul>
                         <li>IBU: 33</li>
                         <li>ABV: 4,5 %</li>
@@ -126,7 +128,7 @@
                 <div class="estilos">
                     <h4>AMERICAN IPA</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Doloribus iusto explicabo sequi delectus quae sint eius totam neque, aliquam debitis iure rerum error saepe sed dolorem magnam illum aperiam molestiae?</p>
+                    <p>Un blend de 3 variedades de lúpulo que aportan notas resinosas, citricas y de frutas tropicales. De cuerpo liviano.</p>
                     <ul>
                         <li>IBU: 50</li>
                         <li>ABV: 6,3 %</li>
@@ -136,7 +138,7 @@
                 <div class="estilos">
                     <h4>ENGLISH IPA</h4>
                     <hr>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae error, nemo, eos maiores corrupti ratione tempore ex iusto quae natus doloremque saepe voluptate illum voluptatibus itaque optio est ea? Praesentium?</p>
+                    <p>Tradicional IPA de origen Ingles. Blend de lúpulos británicos, con una leve carga de maltas caramelo, amargor medio a medio/alto, notas resinosas y herbales en nariz y boca.</p>
                     <ul>
                         <li>IBU: 50</li>
                         <li>ABV: 5,7 %</li>
