--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 <div class="contenedorPrincipal__descripcion main">
                     <img class="contenedorPrincipal__logo" src="img/cerveza-pino-gris.png" alt="imagen corporativa"> 
                     <article class="contenedorPrincipal_articulos">
-                        <p class="contenedorPrincipal__texto">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero et eligendi totam debitis sunt, ullam quidem temporibus exercitationem! Repellat nam neque iure corporis enim fugiat molestiae illo nesciunt aliquid consequuntur.</p>    
-                        <p class="contenedorPrincipal__texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit, autem distinctio incidnt quia sunt totam suscipit provident ipsam! Blanditiis, quo.</p>
+                        <h1 class="contenedorPrincipal__texto">Somos Cerveza Artesanal Pino, amamos la cerveza y lo que hacemos.</h1>    
+                        <p class="contenedorPrincipal__texto">¡Encontranos en las mejores cervecerías!</p>
                     </article>
                 </div>
 
@@ -73,21 +73,21 @@
             <section class="contenedorDestacadas destacada">
 
                 <div class="contenedorDestacadas__caja caja1">
-                    <h4 class="contenedorDestacadas__titulo">Cerveza 1</h4>
+                    <h4 class="contenedorDestacadas__titulo">DRY STOUT</h4>
                     <img class="contenedorDestacadas__imagen" src="icons/birra5.svg" alt="Cerveza 1">
-                    <p class="contenedorDestacadas__texto">Breve presentación del primer estilo de cerveza.</p>            
+                    <p class="contenedorDestacadas__texto">Ganadora medalla de plata en copa Argentina 2019.</p>            
                 </div>
 
                 <div class="contenedorDestacadas__caja caja2">
-                    <h4 class="contenedorDestacadas__titulo">Cerveza 2</h4>
+                    <h4 class="contenedorDestacadas__titulo">HEFEWEIZEN</h4>
                     <img class="contenedorDestacadas__imagen" src="icons/birra3.svg" alt="Cerveza 2">
-                    <p class="contenedorDestacadas__texto">Breve presentación del segundo estilo de cerveza.</p>   
+                    <p class="contenedorDestacadas__texto">Ganadora medalla de bronce en copa de cervezas de América 2019</p>   
                 </div>
 
                 <div class="contenedorDestacadas__caja caja3">
-                    <h4 class="contenedorDestacadas__titulo">Cerveza 3</h4>
+                    <h4 class="contenedorDestacadas__titulo">ENGLISH IPA</h4>
                     <img class="contenedorDestacadas__imagen" src="icons/birra7.svg" alt="Cerveza 3">
-                    <p class="contenedorDestacadas__texto">Breve presentación del tercer estilo de cerveza.</p>
+                    <p class="contenedorDestacadas__texto">Ganadora medalla de plata en copa de cervezas Latinoamérica 2018</p>
                 </div>
 
             </section>
